fixed some notices